--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,40 @@
-node_modules
+node_modules/
+#log
+logs
+*.logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+lib-cov
+coverage
+.nyc_output
+.grunt
+bower_components
+.lock-wscript
+build/Release
+
+node_modules/
+jspm_packages
+
+typings/
+
+.npm
+.eslintcache
+.node_repl_history
+
+*.tgz
+
+.yarn_integrity
+
+.env
+
+.next
+
+.vscode
