--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   },
   "dependencies": {
     "@types/node": "^12.12.7",
+    "axios": "^0.19.0",
     "colors": "^1.4.0",
-    "commander": "^4.0.1"
+    "commander": "^4.0.1",
+    "readline": "^1.3.0"
   }
 }
