--- a/react-ts-eslint-wp4/package.json
+++ b/react-ts-eslint-wp4/package.json
@@ -4,13 +4,17 @@
   "private": true,
   "dependencies": {
     "@loadable/component": "^5.10.2",
+    "antd": "^3.25.2",
     "core-js": "^2.6.9",
+    "customize-cra": "^0.9.1",
     "react": "^16.9.0",
+    "react-app-rewired": "^2.1.5",
     "react-dom": "^16.9.0",
     "react-loadable": "^5.5.0",
     "react-router-dom": "^5.0.1"
   },
   "scripts": {
+    "start": "react-app-rewired start",
     "dev": "cross-env NODE_ENV=development webpack-dev-server --config ./config/webpack.dev.js --env=dev",
     "build": "cross-env NODE_ENV=production node config/build.js --env=prod --report",
     "mock": "node mock/mock-service.js"
@@ -45,6 +49,7 @@
     "babel-eslint": "^10.0.3",
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
+    "babel-plugin-import": "^1.12.2",
     "chalk": "^2.4.2",
     "clean-webpack-plugin": "^3.0.0",
     "compression-webpack-plugin": "^3.0.0",
