--- a/react-ts-eslint-wp4/package.json
+++ b/react-ts-eslint-wp4/package.json
@@ -1,20 +1,18 @@
 {
-  "name": "ts-react-boilerplate",
+  "name": "ts-react-demo",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@loadable/component": "^5.10.2",
     "antd": "^3.25.2",
+    "axios": "^0.19.0",
     "core-js": "^2.6.9",
-    "customize-cra": "^0.9.1",
     "react": "^16.9.0",
-    "react-app-rewired": "^2.1.5",
     "react-dom": "^16.9.0",
     "react-loadable": "^5.5.0",
     "react-router-dom": "^5.0.1"
   },
   "scripts": {
-    "start": "react-app-rewired start",
     "dev": "cross-env NODE_ENV=development webpack-dev-server --config ./config/webpack.dev.js --env=dev",
     "build": "cross-env NODE_ENV=production node config/build.js --env=prod --report",
     "mock": "node mock/mock-service.js"
@@ -36,6 +34,7 @@
     "@babel/preset-react": "^7.0.0",
     "@commitlint/cli": "^8.1.0",
     "@svgr/webpack": "^4.3.2",
+    "@types/axios": "^0.14.0",
     "@types/jest": "^24.0.18",
     "@types/node": "12.7.2",
     "@types/react": "16.9.2",
