--- a/react-ts-eslint-wp4/package.json
+++ b/react-ts-eslint-wp4/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "dependencies": {
     "@loadable/component": "^5.10.2",
+    "@types/lodash": "^4.14.149",
     "antd": "^3.25.2",
     "axios": "^0.19.0",
     "core-js": "^2.6.9",
+    "lodash": "^4.17.15",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-loadable": "^5.5.0",
