--- a/parcel-antd/package.json
+++ b/parcel-antd/package.json
@@ -1,24 +1,31 @@
 {
   "name": "parcel-antd",
   "version": "1.0.0",
-  "main": "index.js",
   "scripts": {
-    "dev": "parcel index.html --no-cache"
+    "dev": "parcel src/index.html --no-cache"
   },
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.7.4",
     "@babel/preset-env": "^7.7.4",
     "@babel/preset-react": "^7.7.4",
+    "@types/lodash": "^4.14.149",
+    "@types/react": "16.9.2",
+    "@types/react-dom": "16.9.0",
+    "@types/react-router-dom": "^4.3.5",
     "babel-plugin-import": "^1.13.0",
+    "lodash": "^4.17.15",
     "parcel-bundler": "^1.12.4",
     "typescript": "^3.7.2"
   },
   "dependencies": {
+    "@loadable/component": "^5.11.0",
     "antd": "^3.26.0",
+    "axios": "^0.19.0",
     "less": "^3.10.3",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-router-dom": "^5.0.1"
   },
   "browserslist": [
     "> 1%",
