--- a/react-ts-eslint-wp4/package.json
+++ b/react-ts-eslint-wp4/package.json
@@ -79,11 +79,13 @@
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "lint-staged": "^9.2.5",
+    "lost": "^8.3.1",
     "mini-css-extract-plugin": "^0.8.0",
     "mockjs": "^1.0.1-beta3",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "ora": "^3.4.0",
     "postcss-aspect-ratio-mini": "^1.0.1",
+    "postcss-less": "^3.1.4",
     "postcss-loader": "^3.0.0",
     "postcss-px-to-viewport": "^1.1.1",
     "postcss-write-svg": "^3.0.1",
